<resources>
    <string name="app_name">SkinSense</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="already_a_user_signin_now">Already a User? SignIn Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classified_as">Classified as</string>
    <string name="options">Options</string>
    <string name="disease_image">Disease image</string>
    <string name="title_activity_map">map</string>
    <string name="api_key_map">AIzaSyBoP_x807sGOaWP0DZ2wjN_axCA0qD9l04</string>
    <string name="title_activity_get_details">GetDetailsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_no">Phone No</string>
</resources>