<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".CameraFragment">


    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/disease_image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/classified_as"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/green2"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/result"
        android:text=""
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:textColor="@color/yellow2"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/options"
        android:gravity="center"
        android:layout_marginTop="220dp"
        android:textColor="@color/green2"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confidence"
        android:text=""
        android:gravity="center"
        android:layout_marginTop="530dp"
        android:textColor="@color/yellow2"
        android:textSize="23sp"/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="15dp"
        android:gravity="center">

        <GridLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/green2"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/medicine" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Basic Medication"
                        android:textColor="@color/yellow2"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/green2"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/doctor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nearby Doctor"
                        android:textColor="@color/yellow2"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </RelativeLayout>

</FrameLayout>